--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,38 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+/* .country-list {
+  list-style: none;
+} */
+
+.country-item {
+  display: flex;
+}
+
+.country-list__flags {
+  margin-right: 10px;
+}
+
+.country {
+  display: flex;
+  align-items: center;
+}
+
+.capital-flag {
+  margin-right: 20px;
+}
+
+.country-title {
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.country-text {
+font-size: 23px;
+font-weight: 700;
+margin-right: 20px;
+}
+/* .country-subtext {
+  font-size: 20px;
+} */
